#What is new in v1.0.22

- Observational fields implemented


#What is new in v1.0.21:

- Fixing translations errors in several places
- Fixing translations errors in forms (i.e. agreement form, in terms of use)
- Private attachments is now visible for reviers.
- Implemented public scoreboard
- Bug fixe in Registration date format
- Bug fixe in ictrp xml
- When generating ictrp xml, if public contact doesn't exist, scientific contact
will be used as a public contact


#What is new in v1.0.20:

- Basic Search
- UTRN label renomed to UTN
- Recruitation dates in clinical trials preview
- UTN number visible in clinical trial preview
- Registration date visible for registred trials
- Base Export in ICTRP xml format