@@ -258,9 +258,8 @@ def new_submission(request):
 
     if request.method == 'POST':
         initial_form = InitialTrialForm(request.POST, request.FILES, user=request.user)
-        #sponsor_form = PrimarySponsorForm(request.POST)
-
-        if initial_form.is_valid(): # and sponsor_form.is_valid():
+        
+        if initial_form.is_valid(): 
             trial = ClinicalTrial()
 
             su = Submission(creator=request.user)
@@ -284,10 +283,8 @@ def new_submission(request):
                 
             trial.save()
 
-            #trial.primary_sponsor = su.primary_sponsor = sponsor
             for country in initial_form.cleaned_data['recruitment_country']:
                 trial.recruitment_country.add(country) # What about the removed ones? FIXME
-            #trial.recruitment_country = [CountryCode.objects.get(pk=id) for pk in initial_form.cleaned_data['recruitment_country']]
             su.trial = trial
 
             trial.save()
@@ -299,9 +296,8 @@ def new_submission(request):
             return HttpResponseRedirect(reverse('repository.edittrial',args=[trial.id]))
     else:
         initial_form = InitialTrialForm(user=request.user, display_language=request.trials_language)
-        #sponsor_form = PrimarySponsorForm()
-
-    forms = [initial_form] #, sponsor_form]
+        
+    forms = [initial_form] 
     return render_to_response('reviewapp/new_submission.html', {
                               'forms': forms,},
                               context_instance=RequestContext(request))
